[package]
name = "aoc-2022"
version = "0.1.0"
authors = ["IdanArye <idanarye@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-main = { git = "https://github.com/remi-dupre/aoc.git" , branch = "main" }
hashbrown = "0.13.1"
regex = "1.7.0"
